--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,14 @@
   width: 100%;
   height: auto;
 }
+
+.header {
+  background-color: black;
+  width: 100%;
+  position: fixed;
+}
+
+.header img {
+  width: 20%;
+  padding-left: 10%;
+}
