--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
 
 .footer {
   background-color: black;
+  height: 7%;
   width: 100%;
   position: absolute;
 }
@@ -29,4 +30,8 @@
 .header img {
   width: 15%;
   padding-left: 10%;
+}
+
+.series-list {
+  padding-top: 5%;
 }
